# CalorieWebsite

./: CMakeCache.txt  CMakeLists.txt  Food.cpp  Food.h  FoodDatabase.cpp  FoodDatabase.h  Foods.csv  HtmlRend.cpp  HtmlRend.h  Journal.cpp  Journal.h  JournalGraph.py  Makefile  Menu.cpp  Menu.h  README.md  Test.cpp  calorieNew.cpp  calories.csv  cmake_install.cmake  index.html  main.cpp  package-lock.json  package.json  server.js
.cmake/api/v1/reply/: cache-v2-56efea9ab96efd9a4980.json  cmakeFiles-v1-dd8d5489f7d144bd554a.json  codemodel-v2-77242294884273448e40.json  index-2025-10-16T23-07-16-0961.json  target-CalorieTracker-Debug-d247ffa458bf089335c9.json  target-test-Debug-911e7c494c5735b4623c.json
public/: cpp.css  displayGraph.html  index.html  styles.css
